--- a/device-communication-test/application/src/main/res/layout/content_power_command.xml
+++ b/device-communication-test/application/src/main/res/layout/content_power_command.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.markeffects.samsungoutreach.PowerCommand"
+    tools:context="com.markeffects.core.MainActivity"
     tools:showIn="@layout/activity_power_command">
 
     <TextView
