--- a/Infortainment_Control/app/src/main/res/layout/premieres_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/premieres_layout.xml
@@ -4,11 +4,71 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/add_television_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Television Premieres"
+        android:textSize="30sp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="337dp"
+        android:fillViewport="true"
+        android:paddingTop="30dp"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="348dp"
+            android:orientation="vertical">
+
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/premieres_table">
+
+                <TableRow android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/runLabel"
+                        android:text="Name"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="204dp"
+                        android:background="@drawable/cell_shape"
+                        android:paddingLeft="10dp"
+                        />
+                    <TextView
+                        android:id="@+id/hitLabel"
+                        android:text="Date"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="90dp"
+                        android:background="@drawable/cell_shape"
+                        android:paddingLeft="10dp"
+                        />
+                    <TextView
+                        android:id="@+id/errorLabel"
+                        android:text="Time"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"
+                        android:layout_width="90dp"
+                        android:background="@drawable/cell_shape"
+                        android:paddingLeft="10dp"
+                        />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Premieres fragment"
-        android:typeface="serif"
-        android:textStyle="bold"
-        android:textSize="36sp"/>
+        android:weightSum="1">
+
+
+    </LinearLayout>
 
 </LinearLayout>
