--- a/Infortainment_Control/app/src/main/res/values/array.xml
+++ b/Infortainment_Control/app/src/main/res/values/array.xml
@@ -6,9 +6,9 @@
         <item>@string/sony</item>
         <item>@string/vizio</item>
     </string-array>
-    <string-array name="cable_provider_array">
+    <string-array name="cable_manufacturer_array">
         <item>@string/comcast</item>
-        <item>@string/Massillon</item>
-        <item>@string/specrum</item>
+        <item>@string/massillon</item>
+        <item>@string/spectrum</item>
     </string-array>
 </resources>
