--- a/testdb/app/src/main/res/layout/content_database_interaction.xml
+++ b/testdb/app/src/main/res/layout/content_database_interaction.xml
@@ -18,4 +18,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/default_message"
+        android:inputType=
+            "textCapSentences|textAutoCorrect"
+    />
+
+
 </android.support.constraint.ConstraintLayout>
