Started numpad dialog

--- a/Infortainment_Control/app/src/main/res/drawable/button_square_black.xml
+++ b/Infortainment_Control/app/src/main/res/drawable/button_square_black.xml
@@ -12,6 +12,6 @@
         />
     <stroke
         android:width="0dp"
-        android:color=""
+        android:color="#000000"
         />
 </shape>
