--- a/Infortainment_Control/app/src/main/res/layout/numpad_layout.xml
+++ b/Infortainment_Control/app/src/main/res/layout/numpad_layout.xml
@@ -4,14 +4,16 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center">
 
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:columnCount="3"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <Button android:text="1" />
 
